# Ride-Sharing-Service

./: .env.example  .flake8  Dockerfile  README.md  pyproject.toml
src/: config.py  main.py
src/auth/: config.py  models.py  routers.py  schemas.py  utils.py
src/database/: config.py  database.py  init.py
src/database/migrations/: 001_auto.py
src/drive/: models.py  routers.py  schemas.py  utils.py
src/regions/: models.py  routers.py  schemas.py  utils.py
